@@ -132,6 +132,15 @@ BrushPresetForm::BrushPresetForm(QWidget *parent)
 	connect(
 		m_presetDescriptionEdit, &QPlainTextEdit::textChanged, this,
 		&BrushPresetForm::emitPresetDescriptionChanged);
+
+	utils::addFormSpacer(attachedLayout);
+
+	m_takeableCheckBox =
+		new QCheckBox(tr("Allow others in a session to use this brush"));
+	attachedLayout->addRow(tr("Sharing:"), m_takeableCheckBox);
+	connect(
+		m_takeableCheckBox, &QCheckBox::clicked, this,
+		&BrushPresetForm::takeableChanged);
 }
 
 QString BrushPresetForm::presetName() const
@@ -194,6 +203,11 @@ void BrushPresetForm::setPresetShortcut(const QKeySequence &presetShortcut)
 void BrushPresetForm::setChangeShortcutEnabled(bool enabled)
 {
 	m_presetShortcutButton->setEnabled(enabled);
+}
+
+void BrushPresetForm::setTakeable(bool takeable)
+{
+	m_takeableCheckBox->setChecked(takeable);
 }
 
 void BrushPresetForm::choosePresetThumbnailFile()
@@ -418,6 +432,7 @@ void BrushSettingsDialog::updateUiFromActiveBrush(
 	QScopedValueRollback<bool> rollback(d->updating, true);
 	QSignalBlocker blocker{this};
 	d->brush = brush;
+	d->brushPresetForm->setTakeable(!d->brush.isConfidential());
 
 	DP_BrushShape shape = brush.shape();
 	bool shapeChanged = shape != d->lastShape;
@@ -557,6 +572,12 @@ QWidget *BrushSettingsDialog::buildPresetPageUi()
 	connect(
 		d->brushPresetForm, &BrushPresetForm::presetThumbnailChanged, this,
 		&BrushSettingsDialog::presetThumbnailChanged);
+	connect(
+		d->brushPresetForm, &BrushPresetForm::takeableChanged, this,
+		[this](bool takeable) {
+			d->brush.setConfidential(!takeable);
+			emitChange();
+		});
 
 	QScrollArea *scroll = new QScrollArea(this);
 	scroll->setWidgetResizable(true);
